--- a/index.html
+++ b/index.html
@@ -15,29 +15,106 @@
 <script src="https://unpkg.com/react-dom@17.0.2/umd/react-dom.production.min.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <script type="text/babel">
-  const root = document.getElementById("root");
 
-  function App() {
-    const [minutes, setMinutes] = React.useState();
+  function MinutesToHours() {
+    const [amount, setAmounts] = React.useState();
+    const [flipped, setFlipped] = React.useState(false);
     const onChange = (event) => {
-      setMinutes(event.target.value);
+      setAmounts(event.target.value);
+    }
+    const reset = () => setAmounts(0);
+    const onFlip = () => {
+      setFlipped((current) => !current);
+      reset();
+    };
+    return (
+      <div>
+        <div>
+          <label htmlFor="minutes">Minutes</label>
+          <input
+            value={flipped ? amount * 60 : amount}
+            id="minutes"
+            placeholder="Minutes"
+            type="number"
+            onChange={onChange}
+            disabled={flipped} />
+        </div>
+        <div>
+          <label htmlFor="hours">Hours</label>
+          <input
+            value={flipped ? amount : amount / 60}
+            id="hours"
+            placeholder="Hours"
+            type="number"
+            disabled={!flipped}
+            onChange={onChange} />
+        </div>
+        <button onClick={reset}>Reset</button>
+        <button onClick={onFlip}>Flip</button>
+      </div>
+    );
+  }
+  function KmToMiles() {
+
+    const [distance, setDistance] = React.useState();
+    const [inverted, setInvert] = React.useState(false);
+    const reset = () => setDistance(0);
+    const change = (event) => {
+      setDistance(event.target.value)
+    };
+    const onInvert = () => {
+      setInvert((current) => !current);
+      reset();
+    };
+
+
+    return (
+      <div>
+        <div>
+          <label htmlFor="km">Km</label>
+          <input
+            value={inverted ? distance * 1.609 : distance}
+            id="km"
+            placeholder="Km"
+            type="number"
+            onChange={change}
+            disabled={inverted}
+          />
+        </div>
+        <div>
+          <label htmlFor="miles">Miles</label>
+          <input
+            value={inverted ? distance : distance / 1.609}
+            id="miles"
+            placeholder="Miles"
+            type="number"
+            onChange={change}
+            disabled={!inverted}
+          />
+        </div>
+        <button onClick={reset}>Reset</button>
+        <button onClick={onInvert}>Invert</button>
+      </div>
+    );
+  }
+  function App() {
+    const [index, setIndex] = React.useState("0");
+    const onSelect = (event) => {
+      setIndex(event.target.value);
     }
     return (
       <div>
         <h1>Super Converter</h1>
-        <label htmlFor="minutes">Minutes</label>
-        <input
-          value={minutes}
-          id="minutes"
-          placeholder="Minutes"
-          type="number"
-          onChange={onChange} />
-        <h4>You want to convert {minutes}</h4>
-        <label htmlFor="hours">Hours</label>
-        <input id="hours" placeholder="Hours" type="number" />
+        <select value={index} onChange={onSelect}>
+          <option value="0">Minutes & Hours</option>
+          <option value="1">Km & Miles</option>
+        </select>
+        {index === "0" ? <MinutesToHours /> : null}
+        {index === "1" ? <KmToMiles /> : null}
       </div>
-    )
+    );
   }
+  const root = document.getElementById("root");
   ReactDOM.render(<App />, root);
 
 </script>
